- Started clean up of z-axis - Code reformatting